# MD-Render

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  changelog.md  license.txt
.github/workflows/: build-release.yml
OLD/mdr_application/: mod.rs
OLD/mdr_core/: mdr_command_buffer.rs  mdr_engine.rs  mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  lib.rs
crates/example/: Cargo.toml
crates/example/src/: logger.rs  main.rs
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs
engine/src/context/: context.rs  window.rs
engine/src/graphics_context/: context.rs  mod.rs  resource_manager.rs  window.rs
engine/src/input/: mod.rs
example/: Cargo.toml
example/src/: logger.rs  main.rs
examples/basic/: logger.rs  main.rs  utils.rs
scripts/: compile_shaders.bat
src/: config.rs  engine.rs  lib.rs  logger.rs  main.rs  mdr_application.rs  mdr_device.rs  mdr_engine.rs  mdr_pipeline.rs  mdr_swapchain.rs  mdr_window.rs
src/context/: context.rs
src/graphics/: context.rs  mod.rs  pipeline.rs  render_pass.rs  resource_manager.rs  window.rs
src/graphics_context/: context.rs  image.rs  mod.rs  pipeline.rs
src/input/: mod.rs
src/mdr_core/: mdr_command_buffer.rs  mdr_device.rs  mdr_engine.rs  mdr_pipeline.rs  mdr_swapchain.rs  mdr_window.rs  mod.rs
src/mdr_scene/: mdr_camera.rs  mdr_mesh.rs  mdr_model.rs  mdr_object.rs  mdr_vertex.rs  mod.rs
src/scene/: camera.rs  light.rs  material.rs  mesh.rs  mod.rs  object.rs  transform.rs
src/shaders/: basic.frag  basic.vert  mod.rs
src/update/: mod.rs
tests/: test_transform.rs
(+36 files in other folders)
