[package]
name = "mdr_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.8.0"
nalgebra = "0.31.0"
image = "0.24.0"
log = "0.4.17"
rustc-hash = "1.1.0"
tobj = "3.2.2"
vulkano = { version = "0.29.0", path = "./vendor/vulkano/vulkano" }
vulkano-shaders = { version = "0.29.0", path = "./vendor/vulkano/vulkano-shaders" }
vulkano-win = { version = "0.29.0", path = "./vendor/vulkano/vulkano-win" }
winit = "0.26.1"